--- a/hackathon-backend/pyproject.toml
+++ b/hackathon-backend/pyproject.toml
@@ -5,7 +5,7 @@ description = "Default template for PDM package"
 authors = [
     {name = "sankalpaacharya", email = "sankalpaacharya01@gmail.com"},
 ]
-dependencies = ["fastapi>=0.115.11", "uvicorn>=0.34.0", "pydantic-settings>=2.8.1", "httpx>=0.28.1", "python-multipart>=0.0.20", "pypdf>=5.4.0", "supabase>=2.14.0", "faiss-cpu>=1.10.0", "sentence-transformers>=3.4.1", "chromadb>=0.6.3", "langchain-chroma>=0.2.2", "groq>=0.22.0"]
+dependencies = ["fastapi>=0.115.11", "uvicorn>=0.34.0", "pydantic-settings>=2.8.1", "httpx>=0.28.1", "python-multipart>=0.0.20", "pypdf>=5.4.0", "supabase>=2.14.0", "faiss-cpu>=1.10.0", "sentence-transformers>=3.4.1", "chromadb>=0.6.3", "langchain-chroma>=0.2.2"]
 requires-python = ">=3.11"
 readme = "README.md"
 license = {text = "MIT"}
